add more details

--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <title>First GitPage</title>
-"Hello GitPages" 
+<body>
+<h2>Overview</h2>
+Over twenty years of IT experience starting with MVS, thru client/server and now web-related technologies
+<h2>Experience</h2>
+<h3>USAA</h3>
+<h3>JDA</h3>
+<h3>Digital Pilot</h3>
+<h3>IBM</h3>
+<h3>EDS</h3>
+<h2>References</h2>
+</body>
