changed to list tag

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <h2>Overview</h2>
 Over twenty years of IT experience starting with MVS, thru client/server and now web-related technologies
 <h2>Experience</h2>
-<h3>USAA</h3>
-<h3>JDA</h3>
-<h3>Digital Pilot</h3>
-<h3>IBM</h3>
-<h3>EDS</h3>
+<ul>
+<li><h3>USAA</h3></li>
+<li><h3>JDA</h3></li>
+<li><h3>JDA</h3></li>
+<li><h3>Digital Pilot</h3></li>
+<li><h3>IBM</h3></li>
+<li><h3>EDS</h3></li>
+</ul>
 <h2>References</h2>
 </body>
