add more details

--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@ Over twenty years of IT experience starting with MVS, thru client/server and now
 <h2>Experience</h2>
 <ul>
 <li><h3>USAA</h3></li>
+<br\>April 2014 to present
+<br\>
 <li><h3>JDA</h3></li>
-<li><h3>JDA</h3></li>
+<br\>September 2001 to April 2014
+<br\>
 <li><h3>Digital Pilot</h3></li>
+<br\>November 2000 to September 2001
+<br\>
 <li><h3>IBM</h3></li>
+<br\>January 1989 to November 2000
+<br\>
 <li><h3>EDS</h3></li>
+<br\>September 1985 to January 1989
+<br\>
 </ul>
 <h2>References</h2>
+<p>Upon request</p>
 </body>
