Added Education section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@ Over twenty years of IT experience starting with MVS, thru client/server and now
 <br\>September 1985 to January 1989
 <br\>
 </ul>
+<h2>Education</h2>
+<ul>
+    <li>MS in Computer Science, 2000 from National Technical Universary</li>
+    <li>BS in Computer Science, 1985 from Universary of Maryland, Baltimore County</li>
+    <li>BS in Liberal Studies, concentration in Computer Science, 1982 from Salisbury State Colleg</li>
+</ul>
 <h2>References</h2>
 <p>Upon request</p>
 </body>
