reformat experience a bit

--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
 <title>First GitPage</title>
 <body>
 <h2>Overview</h2>
-Over twenty years of IT experience starting with MVS, thru client/server and now web-related technologies
+Over twenty years of IT experience starting with MVS, thru client/server and now web-related technologies.  
 <h2>Experience</h2>
 <ul>
-<li><h3>USAA</h3></li>
-<br\>April 2014 to present
+<li><h3>USAA April 2014 to present</h3></li>
 <br\>
-<li><h3>JDA</h3></li>
-<br\>September 2001 to April 2014
+<br\>Working in the Money Movement group within USAA.  Our group handles all bill payments, funds transfers, wires and any other forms of moving money.  We move Billions of dollars!  Currently working on an internal product that handles all these transactions and replaces an older less functional vendor product.  Leading up our migration work effort to move from WebSphere to JBoss along with implementing newer technology like Restful web services.
 <br\>
-<li><h3>Digital Pilot</h3></li>
-<br\>November 2000 to September 2001
+<li><h3>JDA - September 2001 to April 2014</h3></li>
 <br\>
-<li><h3>IBM</h3></li>
-<br\>January 1989 to November 2000
+<br\>Technical Team Lead and Scrum Master for Agile development team working on the JDA POS application.  Designed and implemented our initial RESTful API.  Installed and implemented Jenkins for teams continuous integration builds. Lead the migration from EJB2.1 to EJB3 and migration from Hibernate 2 to Hibernate 3.  Recently completed integration to a new 3rd party customer relationship management system.
+Also worked on the JDA Workforce Management application, implementing several modules in the Time & Attendance and Wizard-Based Reporting components.
+Growing usage of Groovy & Grails as tools for the team.
 <br\>
-<li><h3>EDS</h3></li>
-<br\>September 1985 to January 1989
+<li><h3>Digital Pilot - November 2000 to September 2001</h3></li>
+<br\>
+<br\>Created a transportation vertical application on top of the customer's electronic signature framework to greatly reduce the amount of paperwork required in the cargo shipping and transportation arena.  
+EJB 1.x implementation using Oracle database and JSPs.
+<br\>
+<li><h3>IBM - January 1989 to November 2000</h3></li>
+<br\>
+<br\>Worked on several projects including Health Data Network (HDN), Domino Migration Engine, IBM Workplace, and OfficeVision/MVS.  
+These applications ranged from web applications on AIX, to Lotus Notes applications and CICS/MVS applications.
+<br\>
+<li><h3>EDS - September 1985 to January 1989</h3></li>
+<br\>
+<br\>Worked in the State Operations Group on state projects like Colorado Medicaid, New York Elderly Pharmaceutical Insurance Coverage (EPIC), Massachusetts Automated License and Registration System.
+There were mostly CICS/MVS applications with nightly batch cycles.
 <br\>
 </ul>
 <h2>Education</h2>
 <ul>
     <li>MS in Computer Science, 2000 from National Technical Universary</li>
     <li>BS in Computer Science, 1985 from Universary of Maryland, Baltimore County</li>
-    <li>BS in Liberal Studies, concentration in Computer Science, 1982 from Salisbury State Colleg</li>
+    <li>BS in Liberal Studies, concentration in Computer Science, 1982 from Salisbury Universary</li>
 </ul>
 <h2>References</h2>
 <p>Upon request</p>
